Adding new and updated files

--- a/build.xml
+++ b/build.xml
@@ -24,7 +24,7 @@
   </target>
 
   <target name="songarg" unless="song">
-    <property name="song" value="${basedir}/MaryLamb.txt"/>
+    <property name="song" value="/songs/MaryLamb.txt"/>
   </target>
 
   <target name="run" depends="jar,songarg">
